# Pathfinder

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Pathfinder.cap  README.md  TODO.focus
Pathfinder/: CMakeLists.txt
Pathfinder/Source/: Pathfinder.h  PathfinderPCH.h
Pathfinder/Source/Core/: Application.cpp  Application.h  Core.h  CoreDefines.h  CoreUtils.h  Entrypoint.h  Inheritance.h  Input.cpp  Input.h  Intrinsics.h  Keys.h  Log.cpp  Log.h  Math.h  MathDefines.h  PlatformDetection.h  ThreadPool.cpp  ThreadPool.h  Threading.cpp  Threading.h  Timer.h  UUID.cpp  UUID.h  Window.h
Pathfinder/Source/Events/: Events.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Pathfinder/Source/Layers/: Layer.h  LayerQueue.h  UILayer.cpp  UILayer.h
Pathfinder/Source/Memory/: Memory.cpp  Memory.h
Pathfinder/Source/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Pathfinder/Source/Platform/Vulkan/: VulkanAllocator.cpp  VulkanAllocator.h  VulkanBindlessRenderer.cpp  VulkanBindlessRenderer.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanCore.h  VulkanDescriptorManager.cpp  VulkanDescriptorManager.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceManager.cpp  VulkanDeviceManager.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanHWRT.cpp  VulkanHWRT.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRayTracingBuilder.cpp  VulkanRayTracingBuilder.h  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTexture2D.cpp  VulkanTexture2D.h  VulkanUILayer.cpp  VulkanUILayer.h
Pathfinder/Source/Renderer/: BindlessRenderer.cpp  BindlessRenderer.h  Buffer.cpp  Buffer.h  CPUProfiler.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorManager.cpp  DescriptorManager.h  Framebuffer.cpp  Framebuffer.h  GPUProfiler.h  GraphicsContext.cpp  GraphicsContext.h  HWRT.cpp  HWRT.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RayTracingBuilder.cpp  RayTracingBuilder.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  RendererCoreDefines.h  Shader.cpp  Shader.h  Submesh.cpp  Submesh.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  (+2 more)
Pathfinder/Source/Renderer/Camera/: Camera.cpp  Camera.h  OrthographicCamera.h  PerspectiveCamera.h
Pathfinder/Source/Renderer/Debug/: DebugRenderer.cpp  DebugRenderer.h
Pathfinder/Source/Renderer/Mesh/: Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Submesh.cpp  Submesh.h
Pathfinder/Source/Renderer/Passes/: AOBlur.cpp  AOBlur.h  BloomPass.cpp  BloomPass.h  CascadedShadowMapPass.cpp  CascadedShadowMapPass.h  DebugPass.cpp  DebugPass.h  DepthPrePass.cpp  DepthPrePass.h  FinalComposite.cpp  FinalComposite.h  FramePreparePass.cpp  FramePreparePass.h  GBufferPass.cpp  GBufferPass.h  LightCulling.cpp  LightCulling.h  ObjectCulling.cpp  ObjectCulling.h  Quad2DPass.cpp  Quad2DPass.h  SSAO.cpp  SSAO.h  ScreenSpaceShadowsPass.cpp  ScreenSpaceShadowsPass.h
Pathfinder/Source/Renderer/RenderGraph/: RenderGraph.cpp  RenderGraph.h  RenderGraphBuilder.cpp  RenderGraphBuilder.h  RenderGraphContext.cpp  RenderGraphContext.h  RenderGraphPass.h  RenderGraphResourceID.h  RenderGraphResourcePool.cpp  RenderGraphResourcePool.h
Pathfinder/Source/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h
Sandbox/: CMakeLists.txt  imgui.ini  vk_layer_settings.txt
Sandbox/Assets/: RenderGraphDescription__orig.pfr
Sandbox/Assets/Meshes/cerberus/: license.txt  scene.gltf
Sandbox/Assets/Meshes/cornell_box/: scene.gltf
Sandbox/Assets/Meshes/corvette_stingray/: license.txt  scene.gltf
Sandbox/Assets/Meshes/flintlock_pistol/: license.txt  scene.gltf
Sandbox/Assets/Meshes/kitten/: scene.gltf
Sandbox/Assets/Meshes/little_tokyo/: license.txt  scene.gltf
Sandbox/Assets/Meshes/possum_springs/: license.txt  scene.gltf
Sandbox/Assets/Meshes/sci-fi_helmet/: license.txt  scene.gltf
Sandbox/Assets/Meshes/sibenik/: scene.gltf
Sandbox/Assets/Meshes/sponza/: scene.gltf
Sandbox/Assets/Meshes/viking_room/: viking_room.gltf
Sandbox/Assets/Other/: RenderGraphDescription.pfr
Sandbox/Assets/Scenes/: BistroExterior.pfrscene  BistroExterior1.pfrscene  Flintlock.pfrscene  Kitten.pfrscene  Sponza.pfrscene  SponzaSonne.pfrscene  SponzaSonne_All.pfrscene  TestBedLights.pfrscene
Sandbox/Assets/Shaders/: AtmosphericScattering.frag  AtmosphericScattering.vert  Composite.frag  ComputeFrustums.comp  DepthPrePass.mesh  DepthPrePass.task  DepthPrePass.vert  DepthReduce.comp  Forward.frag  Forward.mesh  Forward.mesh.fast  Forward.vert  ForwardPlus.frag  ForwardPlus.mesh  ForwardPlus.task  GBuffer.frag  GBuffer.mesh  GBuffer.vert  LightCulling.comp  Line.frag  Line.vert  ObjectCulling.comp  Pathfinder.glsl  Quad2D.frag  Quad2D.mesh  Quad2D.vert  RayTrace.comp  RayTrace.rgen  SSAO.frag  SSShadows.comp  ShaderDefines.h  ms.frag  ms.mesh  pathtrace.comp  ps.frag  ps.frag.spv  raytrace.comp  raytrace.comp.glsl  todo_Forward.task
Sandbox/Assets/Shaders/AO/: AO_Blur.frag  AO_Blur.vert  HBAO.frag  SSAO.frag  SSAO_Blur.frag
Sandbox/Assets/Shaders/Culling/: ComputeFrustums.comp  LightCulling.comp  ObjectCulling.comp
Sandbox/Assets/Shaders/Debug/: Line.frag  Line.vert  Sphere.frag  Sphere.vert
Sandbox/Assets/Shaders/Include/: Culling.h  Globals.glslh  Globals.h  Lights.h  Math.glsl  MeshletTaskPayload.glsl  MeshletTaskPayload.glslh  Meshlets.h  PBRShading.glsl  PBRShading.glslh  PhongShading.glslh  Primitives.h
Sandbox/Assets/Shaders/Post/: BoxBlur.frag  BoxBlur.vert  GaussianBlur.frag  GaussianBlur.vert  MedianBlur.frag
Sandbox/Assets/Shaders/Shadows/: CSM.mesh  CSM.task  DirShadowMap.geom  DirShadowMap.mesh  DirShadowMap.task  DirShadowMap.vert  PointLightShadowMap.frag  (+4 more)
Sandbox/Source/: SandboxApp.cpp  SandboxLayer.cpp  SandboxLayer.h
Sandbox/Source/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
(+10 files in other folders)
